# Score

./: .gitignore  fonts.css  main.md  requirements.txt  vercel.json
api/: index.py
public/: global.css
public/web/: activity.html  index.html  messages.html  money.html  reports.html  sheet.js
scoring/: RUN.md  pyproject.toml  serve.py
scoring/scripts/: create_admin.py  download_fonts.py
scoring/services/container/: main.py
scoring/services/judge/: detectors.py  main.py
scoring/services/money/: main.py
scoring/services/netdef/: main.py
scoring/services/team/: main.py
scoring/shared/: auth.py  bootstrap.py  constants.py  container_schema.sql  db.py  deps.py  models.py  schema.sql  witness.py
scoring/tests/: conftest.py  test_auth.py  test_container.py  test_judge.py  test_money.py  test_netdef.py  test_status.py  test_team.py
web/: admin.html  app.js  container.html  index.html
