[project]
name = "scoring"
version = "0.1.0"
description = "Palantir-inspired startup team management: team / netdef / money / judge / container."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "eval_type_backport; python_version < '3.10'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared", "services", "services.team", "services.netdef", "services.money", "services.judge", "services.container"]
